# global-identity-resolution-event-graph

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
architecture/: architecture.md  attribution-flow.md  data-flow.md  fraud-cluster-flow.md  identity-graph-flow.md  matching-decision-flow.md  star-story.md
config/: attribution_rules.yaml  confidence_weights.yaml  event_sources.yaml  fraud_detection_rules.yaml  graph_rules.yaml  matching_rules.yaml  settings.yaml
data/attribution/: attribution_paths.csv  conversion_attribution.csv
data/events/: account_recovery_events.csv  cookie_reset_events.csv  device_change_events.csv  event_generation_summary.json  payment_events.csv  subscription_events.csv  support_ticket_events.csv
data/graph/: cluster_summary.json  identity_clusters.csv  identity_graph.json
data/lineage/: graph_lineage.json  identity_link_explanations.json
data/profiles/: anonymous_users.csv  browser_fingerprints.csv  cookies.csv  devices.csv  emails.csv  (+7 more)
docs/: attribution-design.md  business-problem.md  data-dictionary.md  demo-script.md  graph-model-design.md  identity-resolution-design.md  implementation-plan.md  lineage-and-explainability.md  linkedin-post.md  matching-rules.md  metrics.md  probabilistic-scoring-design.md  recruiter-summary.md  release-notes.md  sample-outputs.md  session-stitching-design.md  suspicious-cluster-detection.md  technical-deep-dive.md
src/: __init__.py
tests/: conftest.py  test_project_v01.py
(+63 files in other folders)
