[project]
name = "global-identity-resolution-event-graph"
version = "0.1.0"
requires-python = ">=3.12"
description = "Synthetic identity resolution and attribution event graph platform"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

